League system overhaul
- Leagues now read parameters from json instead of inscrutible csv values.
- Overhauled league admin page
- Added max games per player option to the league admin UI.
- Added ability to make leagues invite-only.  Also added new section for league admins to add players manually to a league.
- Added description field to all leagues, which displays on the main event tab.  This will need to be reworked into markdown later, but for now it is html.
- Extracted tournament-related admin functions into its own Tournament Admin page.
- Added preliminary support for PC league awards, but this is incomplete and has been hidden in the UI for now.
- Added modified median tiebreaker sorting for tournaments.
- Lots and lots of technical overhauls spilling over from these improvements on the backend.