@@ -1,6 +1,6 @@
 package com.gempukku.lotro.async.handler;
 
-import com.gempukku.lotro.DateUtils;
+import com.gempukku.lotro.common.DateUtils;
 import com.gempukku.lotro.async.HttpProcessingException;
 import com.gempukku.lotro.async.ResponseWriter;
 import com.gempukku.lotro.competitive.PlayerStanding;
@@ -11,7 +11,7 @@ import com.gempukku.lotro.game.LotroCardBlueprintLibrary;
 import com.gempukku.lotro.game.Player;
 import com.gempukku.lotro.game.formats.LotroFormatLibrary;
 import com.gempukku.lotro.league.LeagueData;
-import com.gempukku.lotro.league.LeagueSerieData;
+import com.gempukku.lotro.league.LeagueSerieInfo;
 import com.gempukku.lotro.league.LeagueService;
 import com.gempukku.lotro.packs.ProductLibrary;
 import io.netty.handler.codec.http.HttpMethod;
@@ -99,30 +99,32 @@ public class LeagueRequestHandler extends LotroServerRequestHandler implements U
             throw new HttpProcessingException(404);
 
         final LeagueData leagueData = league.getLeagueData(_productLibrary, _formatLibrary, _soloDraftDefinitions);
-        final List<LeagueSerieData> series = leagueData.getSeries();
+        final List<LeagueSerieInfo> series = leagueData.getSeries();
 
-        int end = series.get(series.size() - 1).getEnd();
-        int start = series.get(0).getStart();
-        int currentDate = DateUtils.getCurrentDate();
+        var end = series.getLast().getEnd();
+        var start = series.getFirst().getStart();
+        var currentDate = DateUtils.Today();
 
         Element leagueElem = doc.createElement("league");
         boolean inLeague = _leagueService.isPlayerInLeague(league, resourceOwner);
 
         leagueElem.setAttribute("member", String.valueOf(inLeague));
-        leagueElem.setAttribute("joinable", String.valueOf(!inLeague && end >= currentDate));
-        leagueElem.setAttribute("draftable", String.valueOf(inLeague && leagueData.isSoloDraftLeague() && start <= currentDate));
-        leagueElem.setAttribute("type", league.getType());
+        leagueElem.setAttribute("joinable", String.valueOf(!inLeague && !league.inviteOnly() && currentDate.isBefore(end)));
+        leagueElem.setAttribute("draftable", String.valueOf(inLeague && leagueData.isSoloDraftLeague() && DateUtils.IsAfterStart(currentDate, start)));
+        leagueElem.setAttribute("code", league.getCodeStr());
         leagueElem.setAttribute("name", league.getName());
+        leagueElem.setAttribute("desc", league.getDescription());
+        leagueElem.setAttribute("inviteOnly", String.valueOf(league.inviteOnly()));
         leagueElem.setAttribute("cost", String.valueOf(league.getCost()));
-        leagueElem.setAttribute("start", String.valueOf(series.get(0).getStart()));
-        leagueElem.setAttribute("end", String.valueOf(end));
+        leagueElem.setAttribute("start", DateUtils.FormatDate(start));
+        leagueElem.setAttribute("end", DateUtils.FormatDate(end));
 
-        for (LeagueSerieData serie : series) {
+        for (LeagueSerieInfo serie : series) {
             Element serieElem = doc.createElement("serie");
             serieElem.setAttribute("type", serie.getName());
             serieElem.setAttribute("maxMatches", String.valueOf(serie.getMaxMatches()));
-            serieElem.setAttribute("start", String.valueOf(serie.getStart()));
-            serieElem.setAttribute("end", String.valueOf(serie.getEnd()));
+            serieElem.setAttribute("start", DateUtils.FormatDate(serie.getStart()));
+            serieElem.setAttribute("end", DateUtils.FormatDate(serie.getEnd()));
             serieElem.setAttribute("formatType", serie.getFormat().getCode());
             serieElem.setAttribute("format", serie.getFormat().getName());
             serieElem.setAttribute("collection", serie.getCollectionType().getFullName());
@@ -169,16 +171,16 @@ public class LeagueRequestHandler extends LotroServerRequestHandler implements U
 
         for (League league : _leagueService.getActiveLeagues()) {
             final LeagueData leagueData = league.getLeagueData(_productLibrary, _formatLibrary, _soloDraftDefinitions);
-            final List<LeagueSerieData> series = leagueData.getSeries();
-
-            int end = series.get(series.size() - 1).getEnd();
+            final List<LeagueSerieInfo> series = leagueData.getSeries();
 
             Element leagueElem = doc.createElement("league");
 
-            leagueElem.setAttribute("type", league.getType());
+            leagueElem.setAttribute("code", league.getCodeStr());
             leagueElem.setAttribute("name", league.getName());
-            leagueElem.setAttribute("start", String.valueOf(series.get(0).getStart()));
-            leagueElem.setAttribute("end", String.valueOf(end));
+            leagueElem.setAttribute("desc", league.getDescription());
+            leagueElem.setAttribute("inviteOnly", String.valueOf(league.inviteOnly()));
+            leagueElem.setAttribute("start", DateUtils.FormatDate(series.getFirst().getStart()));
+            leagueElem.setAttribute("end", DateUtils.FormatDate(series.getLast().getEnd()));
 
             leagues.appendChild(leagueElem);
         }
@@ -190,7 +192,7 @@ public class LeagueRequestHandler extends LotroServerRequestHandler implements U
 
     public League getLeagueByType(String type) {
         for (League league : _leagueService.getActiveLeagues()) {
-            if (league.getType().equals(type))
+            if (league.getCodeStr().equals(type))
                 return league;
         }
         return null;
